# python-micro-projects

./: 0-scrapbook.py  1-keyword-highlight-tool.py  2-declarative.py  3-string-length.py  4-data-summarization.py  5-print-sysstderr.py  6-generate-random-pseudonyms.py  7-pig-latin.py  8-etaoin.py  main.py  pyproject.toml
